[package]
name = "postx"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
color-eyre = "0.6.3"
config = { version = "0.15.8", features = ["toml"] }
derive-new = "^0"
failure = "0.1.8"
headless_chrome = { version = "1.0.15", features = ["fetch", "nightly", "rustls"] }
v_utils = "2.5.0"
xdg = "2.5.2"
